; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/watchdog/extr_mcs814x_wdt.c_mcs814x_wdt_remove.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/watchdog/extr_mcs814x_wdt.c_mcs814x_wdt_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.mcs814x_wdt = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @mcs814x_wdt_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs814x_wdt_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.mcs814x_wdt*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.mcs814x_wdt* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.mcs814x_wdt* %5, %struct.mcs814x_wdt** %3, align 8
  %6 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %7 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @clk_put(i32 %8)
  %10 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %11 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %10, i32 0, i32 0
  %12 = call i32 @watchdog_unregister_device(i32* %11)
  %13 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %14 = getelementptr inbounds %struct.mcs814x_wdt, %struct.mcs814x_wdt* %13, i32 0, i32 0
  %15 = call i32 @watchdog_set_drvdata(i32* %14, i32* null)
  %16 = load %struct.mcs814x_wdt*, %struct.mcs814x_wdt** %3, align 8
  %17 = call i32 @kfree(%struct.mcs814x_wdt* %16)
  %18 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %19 = call i32 @platform_set_drvdata(%struct.platform_device* %18, i32* null)
  ret i32 0
}

declare dso_local %struct.mcs814x_wdt* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @clk_put(i32) #1

declare dso_local i32 @watchdog_unregister_device(i32*) #1

declare dso_local i32 @watchdog_set_drvdata(i32*, i32*) #1

declare dso_local i32 @kfree(%struct.mcs814x_wdt*) #1

declare dso_local i32 @platform_set_drvdata(%struct.platform_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
